# sentinelai-v3

./: .dockerignore  Dockerfile  Dockerfile.gateway  Dockerfile.siem  LICENSE  README.md  README_ES.md  admin_panel.py  admin_signer.py  audit_siem.db  docker-compose.yml  main.py  private.pem  requirements.txt  siem_service.py  verify_chain.py
.github/workflows/: test.yml
config/: policies.yaml
core/: crypto_audit.py  database.py  gateway.py  idempotency.py  policies.sig  policies.yaml  public.pem  relay.py  requirements.txt  sub_manager.py  transaction.py  trust.py
core/app/: context.py  pipeline.py  stages.py
core/sentinel-core/: Cargo.toml  verify.py
core/sentinel-core/src/: engine.rs  lib.rs  logger.rs  models.rs  store.rs
data/: ledger.db
data/rocksdb/: 000020.sst  000029.sst  IDENTITY  LOG  LOG.old.1775679710170054  LOG.old.1775680222233636  LOG.old.1775681336170726  LOG.old.1775682712661103  LOG.old.1775724715965038  LOG.old.1775760169699491  MANIFEST-000026  MANIFEST-000031
execution/: policy_engine.py
identity/: scopes.py
security/: audit_chain.py  enforcer.py  pii_scrub.py
tests/: locustfile.py  test_policy_engine.py
