[package]
name = "sentinel_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "sentinel_core"
crate-type = ["cdylib"]

[dependencies]
# extension-module обязателен для Python-расширений
pyo3 = { version = "0.21.2", features = ["abi3-py312", "extension-module"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rocksdb = "0.21.0"
redis = { version = "0.23.0", features = ["tokio-comp"] }
tokio = { version = "1", features = ["full"] }
sha2 = "0.10"
anyhow = "1.0"
